Fix inspector overlay when use-zoom-for-dsf is enabled.

Inspector overlays were misaligned because the path points were drawing
in window coordinates and needed to be scaled to viewport coordinates.
Should be no change when use-zoom-for-dsf is off.

BUG=622862

Review-Url: https://codereview.chromium.org/2108803006
Cr-Commit-Position: refs/heads/master@{#404063}

Former-commit-id: 6651b97ebd509e97bea8929303738dc20a3ed880