third_party/WebKit/Source/web/InspectorOverlay.cpp
@@ -389,8 +389,7 @@ void InspectorOverlay::rebuildOverlayPage()
     LocalFrame* frame = toLocalFrame(overlayPage()->mainFrame());
     frame->view()->resize(viewportSize);
     overlayPage()->frameHost().visualViewport().setSize(viewportSize);
-    float windowToViewportScale = m_webViewImpl->chromeClient().windowToViewportScalar(1.0f);
-    frame->setPageZoomFactor(windowToViewportScale);
+    frame->setPageZoomFactor(windowToViewportScale());
 
     reset(viewportSize, visibleRectInDocument.location());
 
@@ -446,7 +445,7 @@ void InspectorOverlay::drawQuadHighlight()
     if (!m_highlightQuad)
         return;
 
-    InspectorHighlight highlight;
+    InspectorHighlight highlight(windowToViewportScale());
     highlight.appendQuad(*m_highlightQuad, m_quadHighlightConfig.content, m_quadHighlightConfig.contentOutline);
     evaluateInOverlay("drawHighlight", highlight.asProtocolValue());
 }
@@ -461,6 +460,11 @@ void InspectorOverlay::drawViewSize()
 {
     if (m_resizeTimerActive && m_drawViewSize)
         evaluateInOverlay("drawViewSize", "");
+}
+
+float InspectorOverlay::windowToViewportScale() const
+{
+    return m_webViewImpl->chromeClient().windowToViewportScalar(1.0f);
 }
 
 Page* InspectorOverlay::overlayPage()
@@ -544,8 +548,7 @@ void InspectorOverlay::reset(const IntSize& viewportSize, const IntPoint& docume
 
     // The zoom factor in the overlay frame already has been multiplied by the window to viewport scale
     // (aka device scale factor), so cancel it.
-    float windowToViewportScale = m_webViewImpl->chromeClient().windowToViewportScalar(1.0f);
-    resetData->setNumber("pageZoomFactor", m_webViewImpl->mainFrameImpl()->frame()->pageZoomFactor() / windowToViewportScale);
+    resetData->setNumber("pageZoomFactor", m_webViewImpl->mainFrameImpl()->frame()->pageZoomFactor() / windowToViewportScale());
 
     resetData->setNumber("scrollX", documentScrollOffset.x());
     resetData->setNumber("scrollY", documentScrollOffset.y());
